# A4_HybridX

./: CMakeLists.txt
Include/: car.h  electricCar.h  gasolineCar.h  hybridCar.h
src/: car.cpp  electricCar.cpp  gasolineCar.cpp  hybridCar.cpp  main.cpp
test/: test.cpp
